src/tests/testfiles/function-call-parameter-type-2.txt
Error at 6:5: Arguments to function 'f' don't match: char[] rvalue vs int
f("c");
  ^
